# rubrica

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.en.md  README.md
crates/afirma-bridge/: Cargo.toml  install-handler.sh
crates/afirma-bridge/src/: certificados.rs  larioja.rs  main.rs  protocol.rs  ventana.html
crates/afirma-bridge/src/proveedores/: afirma.rs  carfirma.rs  idazki.rs  mod.rs
crates/afirma-bridge/tests/: e2e_websocket.py  handshake.rs
crates/rubrica-cli/: Cargo.toml
crates/rubrica-cli/src/: main.rs
crates/rubrica-core/: Cargo.toml
crates/rubrica-core/src/: error.rs  lib.rs  tsa.rs
crates/rubrica-core/src/formats/: cades.rs  cms.rs  mod.rs  pades.rs  validate.rs  xades.rs
crates/rubrica-core/src/keystore/: mod.rs  pkcs12.rs
crates/rubrica-core/tests/: sign.rs  tsa_live.rs
crates/rubrica-core/tests/fixtures/: modern.p12  test.p12
crates/rubrica-gui/: Cargo.toml
crates/rubrica-gui/src/: index.html  main.rs
docs/en/: architecture.md  regional-compatibility.md
docs/es/: arquitectura.md  compatibilidad-ccaa.md
spike/: Cargo.toml  README.md
spike/fixtures/: cert.pem  key.pem
spike/src/: main.rs  pades.rs
