[workspace]
resolver = "2"
members = [
    "crates/rubrica-core",
    "crates/rubrica-cli",
    "spike",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jorge Carrera <jorgecarrera98d@gmail.com>"]
repository = "https://github.com/jocarrd/rubrica"
rust-version = "1.75"

[workspace.dependencies]
cms = { version = "0.2", features = ["builder"] }
x509-cert = { version = "0.2", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
der = { version = "0.7", features = ["oid"] }
const-oid = { version = "0.9", features = ["db"] }
spki = "0.7"
p12 = "0.6"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
