[package]
name = "rubrica-spike"
version = "0.0.1"
description = "Spike de de-risk: firmar un PDF en PAdES-B y comprobar que un validador oficial lo acepta"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "rubrica-spike"
path = "src/main.rs"

[dependencies]
cms = { version = "0.2", features = ["builder"] }
x509-cert = { version = "0.2", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
der = { version = "0.7", features = ["oid"] }
const-oid = { version = "0.9", features = ["db"] }
spki = "0.7"
pkcs8 = { version = "0.10", features = ["pkcs5", "encryption"] }
p12 = "0.6"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
